src/sass/_titlebar.scss
@charset "UTF-8";
//
// Titlebar
// --------------------------------------------------

.titlebar {
  @include clearfix();
  @include pwp-flexbox();
  width: 100%;
  background: $player-contrast-color;
  min-height: 100px;
  height: auto;
  color: $player-base-highlight-color;
  a {
    color: $player-idle-color;
  }
  // Headlines in titlebar
  header {
    @include flex(1 0px);
    @include order(3);
    min-width: 1px;
    margin: auto 0;
    padding: 0 $padding-base-horizontal 0 0;
    h1 {
      font-size: 1.5em;
    }
    .subtitle,
    h3 {
      font-size: 1em;
    }
    a {
      color: $player-idle-color;
      &:hover {
        color: $player-hover-color;
      }
      &:active {
        color: $player-active-color;
      }
    }
  }
}

// Cover image of the show in titlebar
.coverart {
  @include order(1);
  min-width: $title-image-width;
  height: $title-image-height;
  img {
    height: $title-image-height;
  }
}

.showtitle {
  margin: 0;
}

.episodetitle {
  margin: 10px 0;
  > a {
    line-height: 20px !important;
    color: $player-base-highlight-color !important;
    &:hover {
      color: $player-hover-color;
    }
  }
}

// Description text of the episode
.subtitle {
  @include ellipsis;
  margin: 0;
  text-shadow: none !important;
  background: transparent !important;
  font-size: $font-size-large;
  opacity: 0.6;
  .summary .summarydiv {
    margin: 0px 5px;
  }
}

// Playbutton
.play {
  @include flex(1 0px);
  @include order(2);
  min-width: 1px;
}

// Breakpoints
// --------------------------------------------------
.titlebar {

  // < 480px
  @media all and (max-width: $screen-phone) {
    .coverart {
      @include flex(1 100%);
      @include order(1);
      width: $title-image-full-width;
      height: auto;
      img {
        height: auto;
        width: 100%;
      }
    }
    header {
      margin: 1.25em 0;
      padding: 0 $padding-small-horizontal 0 0;
    }
  }

  @media all and (min-width: $screen-phone) {
    .coverart {
      padding: $coverart-padding;
      img {
        width: $title-image-height - (2 * $coverart-padding);
        height: $title-image-height - (2 * $coverart-padding);
      }
    }
  }

  // 768px
  @media all and (min-width: $screen-tablet) {
    header {
      h1 {
        font-size: $font-size-h1;
      }
    }
  }

  // 992px
  @media screen and (min-width: $screen-desktop) {
    header {
      .subtitle,
      h3 {
        font-size: $font-size-h3;
      }
    }
  }

  // 992px ≤ x
  @media all and (min-width: $screen-desktop) {
    .coverart {
      min-width: $title-image-height-big;
      height: $title-image-height-big;
      img {
        height: $title-image-height-big - (2 * $coverart-padding);
        width: $title-image-height-big - (2 * $coverart-padding);
      }
    }

    header {
      @include flex(2 0px);
      @include order(2);
      margin: auto auto;
    }
  }
}

// video title
.podlovewebplayer_video .titlebar {
  header {
    margin: auto $margin-small-horizontal;
  }
  @media screen and (min-width: $screen-desktop) {
    header {
      margin: auto $margin-base-horizontal;
    }
  }
}

